fixing mobile overflow

--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ main{
     font-size: 2em;
     margin-top: 90px;   
     width: 100%;
+    margin-right: 500px;
 }
 
 .description{
@@ -194,7 +195,7 @@ main{
 
 .clients{
     /* border: 1px solid grey; */
-    /* padding-right: 80px; */
+    padding-right: 80px;
     padding-top: 20px;
     display: flex;
     justify-content: space-between;
@@ -244,6 +245,11 @@ main{
 }
 
 @media screen and (max-width: 875px){
+    body{
+        overflow-x: hidden;
+    }
+
+
     /* navbar */
     .black-overlay{
         display: block;
@@ -264,6 +270,8 @@ main{
         width: 100vw;
         padding: 25px 20px;
         justify-content: space-between;
+        /* position:sticky;
+        z-index: 3; */
     }
 
     .nav-items{
@@ -345,18 +353,11 @@ main{
     }
 
     /* main section */
-
-    body{
-        overflow-x: hidden;
-    }
-
     main{
         flex-direction: column-reverse;
         width: 100%;
         height: 100%;
-        /* border: 1px solid blue; */
         justify-content:flex-end;
-        /* overflow-y: hidden; */
     }
 
     .main-text{
@@ -381,9 +382,10 @@ main{
     }
 
     .clients{
+        border: 1px solid red;
         flex-wrap: wrap;
     }
-
+    
     .heroes img{
         width: 100vw;
     }
